overlays/uksouth-staging/portal/aperture/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: aperture.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: aperture.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aperture
                port:
                  number: 80
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: healthz
                port:
                  number: 80
  tls:
    - hosts:
        - aperture.${cluster_name}.${location}.bink.sh
      secretName: aperture.${cluster_name}.${location}.bink.sh
